--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.formatOnSave": false
+    "editor.formatOnSave": true,
+    "files.autoSave": "onFocusChange",
+    "liveServer.settings.port": 5500,
+    "editor.wordWrap": "on"
 }
